Generate_with_swagger
